@@ -19,9 +19,9 @@ enum {
 	GB_VIDEO_VERTICAL_TOTAL_PIXELS = GB_VIDEO_VERTICAL_PIXELS + GB_VIDEO_VBLANK_PIXELS,
 
 	// TODO: Figure out exact lengths
-	GB_VIDEO_MODE_2_LENGTH = 78,
-	GB_VIDEO_MODE_3_LENGTH_BASE = 160,
-	GB_VIDEO_MODE_0_LENGTH_BASE = 218,
+	GB_VIDEO_MODE_2_LENGTH = 83,
+	GB_VIDEO_MODE_3_LENGTH_BASE = 158,
+	GB_VIDEO_MODE_0_LENGTH_BASE = 215,
 
 	GB_VIDEO_HORIZONTAL_LENGTH = GB_VIDEO_MODE_0_LENGTH_BASE + GB_VIDEO_MODE_2_LENGTH + GB_VIDEO_MODE_3_LENGTH_BASE,
 
